spacing fixed

--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -81,9 +81,9 @@
 
 .para-one {
     text-align: center;
-    padding-right: 30px;
-    padding-left: 30px;
-    font-size: 20px;
+    padding-right: 26px;
+    padding-left: 26px;
+    font-size: 19px;
     line-height: 27px;
     font-weight: 300;
 }
